# yt-dlp-gui

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/yt_dlp_gui/: __init__.py  main.py
